--- a/.github/workflows/yamdb.yaml
+++ b/.github/workflows/yamdb.yaml
@@ -24,7 +24,13 @@ jobs:
 
     - name: Test with pytest
       run: pytest
-      
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:      
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-18.04
