--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,7 @@ upstream yamdb_final {
     server web:8000;
 }
 server {
+    server_tokens off;
     listen 80;
     location / {
         proxy_pass http://yamdb_final;
